# master-trading-indicators

./: .gitignore  CLAUDE.md  README.md  example_usage.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: claude-code-review.yml  claude.yml
notebooks/: indicator_template.ipynb
notebooks/momentum/: 01_RSI_Complete_Tutorial.ipynb  02_Stochastic_Oscillator_Complete_Tutorial.ipynb  03_MACD_Complete_Tutorial.ipynb
notebooks/trend/: 01_SMA_Complete_Tutorial.ipynb  02_EMA_Complete_Tutorial.ipynb  03_ADX_Complete_Tutorial.ipynb  04_MACD_Complete_Tutorial.ipynb
notebooks/volatility/: 01_Bollinger_Bands_Complete_Tutorial.ipynb
notebooks/volume/: 01_OBV_Complete_Tutorial.ipynb  02_Volume_Profile_Complete_Tutorial.ipynb
utils/: __init__.py  backtest_engine.py  data_downloader.py  indicators.py
